--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
+language: ruby
 
+services:
+  - docker
+
+before_install:
+  - docker build --tag ledger .
+  - docker run -d -p 8080:8080 -p 3000:3000 --name ledger ledger
+
+script:
+  - docker exec -it ledger bash
+  - exit
